--- a/src/pug/layouts/master-page.pug
+++ b/src/pug/layouts/master-page.pug
@@ -1,18 +1,20 @@
+include ./mixins.pug
+
 block variables
 
 <!DOCTYPE html>
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title #{title}
-        link(rel="stylesheet", href="./css/main.css")
-        link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Montserrat:wght@300;500;700&family=Playfair+Display&display=swap")
+        link(rel="stylesheet" href="./css/main.css")
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Montserrat:wght@300;500;700&family=Playfair+Display&display=swap")
     body
-        include ../pages/moduls/header.pug
+        include ../modules/header.pug
 
         block content
 
-        include ../pages/moduls/footer.pug
+        include ../modules/footer.pug
         script(src="./js/main.js")
         script(src="https://use.fontawesome.com/e08d991bf5.js")
