--- a/src/pug/mixins/blog-news.pug
+++ b/src/pug/mixins/blog-news.pug
@@ -1,10 +1,11 @@
-mixin blog-news(heading, date, img, text)
-    .blog-content--news
+mixin blog-news(heading, date, img)
+    article.blog-content--news
         h2.article-heading= heading
         p.date= date
         a(href= "#!").blog-content--img
             img(src=`./img/posts-preview/${img}` alt= heading)
-        p.blog-content--text= text
+        .blog-content--text
+            block
         .blog-content--news--bottom
             a(href= "#!").button-read-more read more
             .social-icons--block.news-icons
